# kinetic

./: .gitignore  README.md  camera_xtion.txt  demo20hz.bag  demo50hz.bag  demo_object.bag  demo_random.bag  demo_rotate.bag  demo_rotateX.bag  pbd_system.xmind  sr300_calibration.txt
aruco_ros/aruco_ros/launch/: marker_publisher.launch  single.launch
aruco_ros/aruco_ros/src/: simple_single.cpp
demo_pioneer/: CMakeLists.txt
demo_pioneer/src/: tutorial_viewer.cpp
easy_handeye/docs/example_launch/: openni2_calibration.launch  ur5_kinect_calibration.launch
force_system/: CMakeLists.txt  package.xml
force_system/config/: gravity_bias.yaml
force_system/src/: averaged_calibrated_force_repub.cpp  gravity_compensated_force_repub.cpp
matlab_gen/jar/: enable-1.0.0.md5  pbd-0.0.0.md5  tf_system-0.0.0.md5  ur_modern_driver-0.1.0.md5
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/: CustomMsgConsts.m
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+tf_system/: Trans_angle_axis.m
object_recognition_linemod/: CMakeLists.txt
object_recognition_linemod/conf/: detection.ros.ork  realsense_detection.ros.ork
pbd/: CMakeLists.txt  package.xml
pbd/config/: gravity_bias.yaml
pbd/launch/: force_system.launch  launch_whole.launch  pbd_pre.launch  realsense.launch  replay.launch  ur_system.launch  xtion.launch
pbd/resources/: assembly_base_model.pcd  cylinder.pcd  cylinder.ply  yellow_cube.pcd
pbd/src/: assembly_base_frame_pub.cpp  assembly_base_pose_pub.cpp  averaged_calibrated_force_repub.cpp  exe_matlab_ur_velocity.cpp  gravity_compensated_force_repub.cpp  point_cloud_preprocess.cpp  process_control.cpp  record.cpp  replay_go_to_origin.cpp  replay_traj.cpp  scan_scene_to_pcd.cpp
peg_in_hole/: CMakeLists.txt  package.xml
peg_in_hole/config/: gravity_bias.yaml
peg_in_hole/include/peg_in_hole/: to_string.h
peg_in_hole/launch/: eye_to_hand.launch  pbd_pre.launch  ur_system.launch
peg_in_hole/resources/: ball.pcd  bottle.blend  bottle.mtl  cloud_passed.pcd  cylinder.blend  cylinder.pcd  final_cloud.pcd  hole_cube.blend  hole_cube.pcd  hole_cube.ply
peg_in_hole/src/: check_obs.cpp  exe_matlab_ur_velocity.cpp  placement_planning.cpp  process_control.cpp  pub_cylinder_frame.cpp  replay_go_to_origin.cpp  replay_traj.cpp  segment_object_grasped.cpp
pose_system/: CMakeLists.txt  package.xml
pose_system/src/: pub_ati_current_pose.cpp  pub_current_pose.cpp  pub_sr300_pose.cpp
reference_6d_pose/: CMakeLists.txt  package.xml
reference_6d_pose/scripts/: record_trajectory.py  replay_trajectory.py
reference_6d_pose/src/: pub_current_pose.cpp  record.cpp  replay_go_to_origin.cpp  replay_traj.cpp
shadow_calibration/: CMakeLists.txt  README.md  calibration_parameters.txt  package.xml
shadow_calibration/demo/: camera_data.xml  camera_eye_in_hand.xml  camera_eye_inhand_result.txt  camera_info.xml  camera_info_primesense.xml  camera_info_xtion.xml  extrinsic.xml  out_camera_data.xml  pose.xml  realsense_sr300.xml  sr300_1280.xml  sr300_1920.xml  sr300_640.xml  xtion.xml
shadow_calibration/include/shadow_calibration/: calibrationbase.h  setting.h
shadow_calibration/launch/: shadow_boardext.launch  shadow_boardext_eye_in_hand.launch  shadow_getjointstate.launch
shadow_calibration/shadow/: camera_data.xml  cmd  jointstate.xml  out_camera_data.xml
shadow_calibration/shadow/image/: extrinsic.xml  jointstate.xml  pose.xml
shadow_calibration/shadow/image/test1/: extrinsic.xml  ur_pose.xml
shadow_calibration/src/: calibrationbase.cpp  getjointstate.cpp  manual-eye-in-hand.cpp  manualcalibration.cpp  pubboardext.cpp  setting.cpp  shadowcalibration.cpp  showImage.cpp
tf_system/: CMakeLists.txt  package.xml
tf_system/msg/: Trans_angle_axis.msg
tf_system/src/: assembly_base_frame_pub.cpp  backup_pub_assembly_base_frame.cpp  pub_assembly_base_frame.cpp  pub_assembly_base_frame_backup0324.cpp  pub_ref_traj.cpp  pub_tool0_target_frame.cpp  quaternion2angle_axis.cpp
universal_robot/ur5_moveit_config/config/: joint_limits.yaml
universal_robot/ur5_moveit_config/launch/: new_demo.launch
universal_robot/ur_description/urdf/: ur5.urdf.xacro
vision_system/: CMakeLists.txt  package.xml
vision_system/src/: image_viewer.cpp  point_cloud_preprocess.cpp  scan_scene_to_pcd.cpp  show_pointcloud_diff.cpp  sr300_preprocess.cpp
vision_visp/visp_auto_tracker/: CMakeLists.txt
vision_visp/visp_auto_tracker/launch/: tracklive_usb.launch
vision_visp/visp_tracker/: CMakeLists.txt
visp_tutorial/: CMakeLists.txt  package.xml
visp_tutorial/src/: image_viewer.cpp
visp_tutorial/src/detection/: matching_keypoint.cpp  model_based_tracking.cpp
visp_tutorial/src/ibvs/: servo_ibvs.cpp  servo_pbvs.cpp  tutorial_blob_auto_detection_and_tracking.cpp  tutorial_blob_tracker_live_camera.cpp  tutorial_ibvs_4pts.cpp  tutorial_ibvs_4pts_display.cpp  tutorial_ibvs_4pts_image_tracking.cpp  tutorial_ibvs_4pts_wireframe_camera.cpp  tutorial_ibvs_4pts_wireframe_robot_viper.cpp
visp_tutorial/src/tracking/: line_tracking.cpp
